--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=3800852455"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=4085756315" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=303049898"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=150015064" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_contact.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=4077262471"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=30091114" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=375044772"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=528827744" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -82,24 +82,19 @@ var muReCAPTCHA2OnloadCallback = function() {
        <div class="MenuItemContainer clearfix grpelem" id="u67517"><!-- vertical box -->
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u67520" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67522-4"><!-- content --><p class="shared_content" data-content-guid="u67522-4_0_content">Attending</p></div></a>
        </div>
-       <div class="MenuItemContainer clearfix grpelem" id="u67559"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u67562" href="memories.html" data-href="page:U336"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67563-4"><!-- content --><p class="shared_content" data-content-guid="u67563-4_0_content">Memories</p></div></a>
-        <div class="SubMenu MenuLevel1 clearfix" id="u67560"><!-- vertical box -->
-         <ul class="SubMenuView clearfix colelem" id="u67561"><!-- vertical box -->
-          <li class="MenuItemContainer clearfix colelem" id="u67727"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u67731" href="school-photos.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u67739-4" data-IBE-flags="txtStyleSrc"><!-- content --><div id="u67739-3" class="shared_content" data-content-guid="u67739-3_content"><p>School Photos</p></div></div></a></li>
-         </ul>
-        </div>
+       <div class="MenuItemContainer clearfix grpelem" id="u93992"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem" id="u94009" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u94011-4"><!-- content --><p class="shared_content" data-content-guid="u94011-4_0_content">Memories</p></div></a>
        </div>
       </nav>
       <div class="clip_frame grpelem" id="u60864"><!-- image -->
        <img class="block temp_no_img_src" id="u60864_img" data-orig-src="images/logo%20spark.png?crc=3811907504" alt="" data-heightwidthratio="0.9352941176470588" data-image-width="170" data-image-height="159" src="images/blank.gif?crc=4208392903"/>
       </div>
-      <!-- m_editable region-id="editable-static-tag-U2350-BP_infinity" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix grpelem shared_content" id="u2350-4" data-muse-uid="U2350" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u2350-4_content"><!-- content -->
-       <p>Contact the Reunion Committee:</p>
-      </div>
-      <!-- /m_editable -->
      </div>
+     <!-- m_editable region-id="editable-static-tag-U2350-BP_infinity" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix colelem shared_content" id="u2350-4" data-muse-uid="U2350" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u2350-4_content"><!-- content -->
+      <p>Contact the Reunion Committee:</p>
+     </div>
+     <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U2522-BP_infinity" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix colelem shared_content" id="u2522-15" data-muse-uid="U2522" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u2522-15_content"><!-- content -->
       <p>You can contact the 2018 Reunion Committee by using the contact form on this page or you can e-mail us directly using the e-mail addresses below.</p>
@@ -222,13 +217,8 @@ var muReCAPTCHA2OnloadCallback = function() {
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u67517"><!-- vertical box -->
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="attending.html" data-href="page:U324" data-orig-id="u67520"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67522-4"><!-- content --><span class="placeholder" data-placeholder-for="u67522-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
-       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u67559"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U336" data-orig-id="u67562"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67563-4"><!-- content --><span class="placeholder" data-placeholder-for="u67563-4_0_content"><!-- placeholder node --></span></div></a>
-        <div class="SubMenu MenuLevel1 clearfix temp_no_id" data-orig-id="u67560"><!-- vertical box -->
-         <ul class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u67561"><!-- vertical box -->
-          <li class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u67727"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="school-photos.html" data-href="page:U4097" data-orig-id="u67731"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-IBE-flags="txtStyleSrc" data-orig-id="u67739-4"><!-- content --><span class="placeholder" data-placeholder-for="u67739-3_content"><!-- placeholder node --></span></div></a></li>
-         </ul>
-        </div>
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u93992"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
       <div class="clip_frame grpelem temp_no_id" data-orig-id="u60864"><!-- image -->
@@ -347,13 +337,8 @@ var muReCAPTCHA2OnloadCallback = function() {
        <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u67517"><!-- vertical box -->
         <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="attending.html" data-href="page:U324" data-orig-id="u67520"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67522-4"><!-- content --><span class="placeholder" data-placeholder-for="u67522-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
-       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u67559"><!-- vertical box -->
-        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U336" data-orig-id="u67562"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u67563-4"><!-- content --><span class="placeholder" data-placeholder-for="u67563-4_0_content"><!-- placeholder node --></span></div></a>
-        <div class="SubMenu MenuLevel1 clearfix temp_no_id" data-orig-id="u67560"><!-- vertical box -->
-         <ul class="SubMenuView clearfix colelem temp_no_id" data-orig-id="u67561"><!-- vertical box -->
-          <li class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u67727"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="school-photos.html" data-href="page:U4097" data-orig-id="u67731"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-IBE-flags="txtStyleSrc" data-orig-id="u67739-4"><!-- content --><span class="placeholder" data-placeholder-for="u67739-3_content"><!-- placeholder node --></span></div></a></li>
-         </ul>
-        </div>
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u93992"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox transition clearfix colelem temp_no_id" href="memories.html" data-href="page:U4097" data-orig-id="u94009"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-orig-id="u94011-4"><!-- content --><span class="placeholder" data-placeholder-for="u94011-4_0_content"><!-- placeholder node --></span></div></a>
        </div>
       </nav>
       <div class="clip_frame grpelem temp_no_id" data-orig-id="u60864"><!-- image -->
@@ -441,7 +426,7 @@ var muReCAPTCHA2OnloadCallback = function() {
      <div class="clearfix colelem temp_no_id" data-orig-id="pu67883-3"><!-- group -->
       <span class="clearfix grpelem placeholder" data-placeholder-for="u67883-3_content"><!-- placeholder node --></span>
       <ul class="AccordionWidget clearfix grpelem" id="accordionu14850" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- vertical box -->
-       <li class="AccordionPanel borderbox clearfix colelem" id="u14851"><!-- vertical box --><div class="AccordionPanelTab borderbox transition clearfix colelem" id="u14852-3" data-IBE-flags="txtStyleSrc"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu15463" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15465" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15468-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Home</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15495" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15497-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>About</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15474" href="news.html" data-href="page:U264"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15476-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>News</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15516" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Programme</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15481" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15482-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Booking</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15488" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15489-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Attending</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15506"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15507" href="memories.html" data-href="page:U336"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15509-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Memories</p></div></a></div></nav></div></li>
+       <li class="AccordionPanel borderbox clearfix colelem" id="u14851"><!-- vertical box --><div class="AccordionPanelTab borderbox transition clearfix colelem" id="u14852-3" data-IBE-flags="txtStyleSrc"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u14853"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu15463" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u15464"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15465" href="index.html" data-href="page:U93"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15468-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Home</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15492"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15495" href="about.html" data-href="page:U252"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15497-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>About</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15471"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15474" href="news.html" data-href="page:U264"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15476-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>News</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15513"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15516" href="programme.html" data-href="page:U276"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15519-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Programme</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15478"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15481" href="booking.html" data-href="page:U12766"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15482-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Booking</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u15485"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u15488" href="attending.html" data-href="page:U324"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u15489-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Attending</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u93913"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u93916" href="memories.html" data-href="page:U4097"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u93919-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Memories</p></div></a></div></nav></div></li>
       </ul>
      </div>
      <!-- m_editable region-id="editable-static-tag-U2350-BP_800" template="contact.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
