--- a/attending.html
+++ b/attending.html
@@ -18,20 +18,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Attending</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=303049898"/>
-  <link rel="stylesheet" type="text/css" href="css/attending.css?crc=4056521688" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_main.css?crc=4056291551"/>
+  <link rel="stylesheet" type="text/css" href="css/attending.css?crc=397904491" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_attending.css?crc=3824530138"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_main.css?crc=375044772"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_attending.css?crc=468588893" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_attending.css?crc=4055978620" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/overlock:n9,n4:default.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/overlock:n9,n4,n7:default.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
@@ -89,10 +89,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U9184-BP_infinity" template="attending.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="rounded-corners clearfix colelem shared_content" id="u9184-22" data-muse-uid="U9184" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u9184-22_content"><!-- content -->
-      <p>Once bookings are confirmed and paid, a list of expected attendees is added on this page.</p>
+     <div class="rounded-corners clearfix colelem shared_content" id="u9184-24" data-muse-uid="U9184" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc" data-content-guid="u9184-24_content"><!-- content -->
+      <p>Once bookings are <span id="u9184-2">confirmed and paid</span>, a list of expected attendees will be added to this page.</p>
       <p>&nbsp;</p>
-      <ol class="list0 nls-None" id="u9184-16">
+      <ol class="list0 nls-None" id="u9184-18">
        <li>Macleod, Mairi</li>
        <li>Mackay, Carla (Rankin)</li>
        <li>Stewart, Hannah (Gold)</li>
@@ -169,7 +169,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="clearfix colelem placeholder" data-placeholder-for="u4098-4_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U9184-BP_1160" template="attending.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u9184-22_content"><!-- placeholder node --></span>
+     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u9184-24_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
     </div>
     <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
@@ -198,7 +198,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="clearfix colelem placeholder" data-placeholder-for="u4098-4_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U9184-BP_800" template="attending.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u9184-22_content"><!-- placeholder node --></span>
+     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u9184-24_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
     </div>
     <div class="clip_frame temp_no_id shared_content" data-orig-id="u60864" data-content-guid="u60864_content"><!-- image -->
@@ -230,7 +230,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <span class="clearfix colelem placeholder" data-placeholder-for="u4098-4_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U9184-BP_601" template="attending.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u9184-22_content"><!-- placeholder node --></span>
+     <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u9184-24_content"><!-- placeholder node --></span>
      <!-- /m_editable -->
     </div>
     <span class="clip_frame placeholder" data-placeholder-for="u60864_content"><!-- placeholder node --></span>
